--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
-    "firebase": "^10.7.0",
+    "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
     "fs": "^0.0.1-security",
     "lucide-react": "^0.292.0",
     "next": "^14.0.4",
