--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev ",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -29,6 +29,7 @@
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
     "fs": "^0.0.1-security",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.292.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
@@ -41,6 +42,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
