--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cmdk": "^0.2.0",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
+    "firebase-tools": "^13.0.3",
     "fs": "^0.0.1-security",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.292.0",
