--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=storage-bucket
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=sender-id
 NEXT_PUBLIC_FIREBASE_APP_ID=app-id
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=analytic-id
+
+API_URL=http://localhost:3000
+NEXT_PUBLIC_EMULATOR_FIRESTORE_PATH=127.0.0.1:8080
+NEXT_PUBLIC_EMULATOR_AUTH_PATH=127.0.0.1:9099
+
+NEXT_PUBLIC_APP_ENV=emulator
