add firebase service account key to env example

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,8 @@ NEXT_PUBLIC_EMULATOR_FIRESTORE_PATH=127.0.0.1:8081
 NEXT_PUBLIC_EMULATOR_AUTH_PATH=127.0.0.1:9099
 
 NEXT_PUBLIC_APP_ENV=emulator
+
+NEXT_PUBLIC_APP_ENV=production
+NODE_ENV=local
+
+FIREBASE_SERVICE_ACCOUNT_KEY=service-account-key
