--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,11 @@ API_URL=http://localhost:3000
 NEXT_PUBLIC_EMULATOR_FIRESTORE_PATH=127.0.0.1:8081
 NEXT_PUBLIC_EMULATOR_AUTH_PATH=127.0.0.1:9099
 
-NEXT_PUBLIC_APP_ENV=emulator
-
 NEXT_PUBLIC_APP_ENV=production
 NODE_ENV=local
+
+PARSER_API=resume-parser-api-url
+DEV_PARSER_API=http://localhost:8080
+DEV_PARSER=false
 
 FIREBASE_SERVICE_ACCOUNT_KEY=service-account-key
